#17 connects HD server to public server
Implements a job in HD server to push DataRequests from HD server to
public server cyclically. Implements a second job in HD server to pull
DataSubmission from public server to HD server. The second job also
triggers the deletion of the previously transmitted DataSubmissions on
the public server.

Improves data initialization during development when using a Postgres
(database is reset).